# Diagrams_Creator

./: .env  .env.example  .eslintrc.js  .gitignore  .npmrc  .renderignore  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM_IMPROVEMENTS.md  DRAWIO_DESKTOP_SETUP.md  Dockerfile  Dockerfile.render  Documentacion de Tablas de Ruteo YDI-v2.xlsx  FRESH_REPO_SETUP.md  GIT_SETUP_GUIDE.md  INSTRUCCIONES.md  INSTRUCCIONES_AZURE.md  INSTRUCCIONES_FINALES.md  INSTRUCCIONES_HUB_SPOKE.md  LICENSE  PROBLEMAS_SOLUCIONADOS.md  README.md  RENDER_DEPLOYMENT.md  RENDER_SETUP_INSTRUCTIONS.md  SECURITY.md  ai_processor.py  app.py  azure-icons-complete.js  azure-icons-official.js  azure-icons-real.js  azure-icons.js  azure-styles.css  azure_diagram_test.json  azure_enhanced_generator.py  azure_enhanced_generator_fixed.py  build.sh  codecov.yml  config.py  config_template.py  diagram-engine.js  (+68 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Libs/: aws_complete.xml  azure_complete.xml  connections_arrows.xml  general_icons.xml
config/: database.js
database/: schema.sql
outputs/: Diagrama Generado por IA_e347f1ec-b552-4331-ac9e-c8b80563899a.txt
scripts/: setup.bat  setup.js  setup.sh
static/: azure-icons.js  azure-styles.css
static/css/: style.css
static/js/: app.js  icons-panel.js
templates/: index.html
tests/: app.test.js  setup.js
